# clone_twitter

./: .gitignore  AGENTS.md  README.md
backend/: build.sh  pyproject.toml
backend/core/: settings.py  urls.py
backend/tweets/: models.py  serializers.py  urls.py  views.py
backend/tweets/migrations/: 0001_initial.py  0002_tweet_likes_comment.py
backend/users/: models.py  serializers.py  urls.py  views.py
backend/users/migrations/: 0001_initial.py  0002_user_bio_user_cover_picture_user_profile_picture.py  0003_user_following.py
etc/nginx/conf.d/: twitter_api.conf  twitter_frontend.conf
frontend/: README.md  package-lock.json  package.json
frontend/src/: App.tsx  main.tsx
frontend/src/api/: axios.ts
frontend/src/app/: store.ts
frontend/src/components/: FollowButton.tsx  ProtectedRoute.tsx  TweetInteractions.tsx  WhoToFollow.tsx
frontend/src/features/auth/: authSlice.ts
frontend/src/layouts/: MainLayout.tsx
frontend/src/pages/: Home.tsx  Login.tsx  Profile.tsx  Register.tsx
frontend/src/styles/: AuthStyles.ts  FeedStyles.ts  GlobalStyles.ts  InteractionStyles.ts  LayoutStyles.ts  ProfileStyles.ts  styled.d.ts  theme.ts
