[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "Jonas Maia",email = "jonasgmaia2@gmail.com"}
]
requires-python = "^3.12"
dependencies = [
    "django (>=6.0.5,<7.0.0)",
    "djangorestframework (>=3.17.1,<4.0.0)",
    "djangorestframework-simplejwt (>=5.5.1,<6.0.0)",
    "django-cors-headers (>=4.9.0,<5.0.0)",
    "pillow (>=12.2.0,<13.0.0)",
    "django-environ (>=0.13.0,<0.14.0)",
    "psycopg[binary] (>=3.3.4,<4.0.0)",
    "gunicorn (>=26.0.0,<27.0.0)",
    "whitenoise (>=6.12.0,<7.0.0)",
    "psycopg2-binary (>=2.9.12,<3.0.0)",
    "cloudinary (>=1.44.2,<2.0.0)",
    "django-cloudinary-storage (>=0.3.0,<0.4.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
